--- a/res/layout/pref_theme.xml
+++ b/res/layout/pref_theme.xml
@@ -1,34 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical">
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
 
-    <LinearLayout 
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-    
-        <ImageView style="@style/icon"
-                   android:src="@drawable/ic_theme"/>
+        android:orientation="horizontal" >
 
-        <TextView style="@style/title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/title_theme" />
-    
+        <ImageView
+            style="@style/icon"
+            android:src="@drawable/ic_theme" />
+
+        <TextView
+            style="@style/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_theme" />
     </LinearLayout>
-        
-    <View style="@style/line" />
-    
-    <Spinner
-        android:id="@+id/spinner_theme"
-        android:layout_width="@dimen/widget_width"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:entries="@array/array_themes"
-        android:prompt="@string/prompt_themes" />  
-        
-</LinearLayout>
 
-        
+    <View style="@style/line" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <Spinner
+            android:id="@+id/spinner_theme"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:entries="@array/array_themes"
+            android:prompt="@string/prompt_themes" />
+
+        <Button
+            android:id="@+id/button_premium"
+            style="@style/button"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="Unlock more themes" android:layout_weight="1"/>
+    </LinearLayout>
+
+</LinearLayout>
